# neurohub

./: .gitignore  .~lock.CRF.xlsx#  LICENSE  README.md  README.rst  manage.py  pyproject.toml  setup.cfg  tmp.ipynb  tmp.py
.github/workflows/: ci.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
neurohub/: conftest.py
neurohub/base_models/: apps.py  models.py  utils.py
neurohub/base_models/migrations/: 0001_initial.py  0002_scan_json_path.py  0002_scan_related_scan.py  0003_rename_related_scan_scan_related_scans.py  0004_alter_scan_related_scans.py  0005_scan_is_raw.py  0006_nifti.py  0007_alter_nifti_parent_tensorderivative.py  0008_remove_scan_is_raw_remove_scan_json_path_and_more.py  0009_alter_scan_nifti.py  0010_delete_scan.py  0011_alter_nifti_parent_alter_tensorderivative_parent.py  0012_session_nifti_session.py  0013_alter_session_time.py  0014_alter_session_options_rename_time_session__time.py  0015_tensorderivative_session.py  0016_remove_tensorderivative_session.py  0017_subject.py  0018_rename_id_number_subject_pylabber_id.py  0019_alter_subject_options_session_subject_and_more.py  0020_remove_subject_id_alter_subject_date_of_birth_and_more.py  0021_subject_id_number.py  0022_study.py  0023_remove_study_subjects.py  0025_alter_subject_date_of_birth.py  (+12 more)
neurohub/models/: scan.py
neurohub/scripts/: update_database.py
neurohub/templates/: base.html
neurohub/users/: admin.py  apps.py  models.py  urls.py
requirements/: base.txt  local.txt
(+19 files in other folders)
